--- a/charts/rancher-logging/0.0.1/charts/fluentd/templates/secret.yaml
+++ b/charts/rancher-logging/0.0.1/charts/fluentd/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: {{ template "fluentd.fullname" . }}-precan-config
+  name: {{ template "fluentd.fullname" . }}
   labels:
     app: {{ include "fluentd.name" . }}
     chart: {{ template "fluentd.version" . }}
@@ -9,8 +9,8 @@ metadata:
     heritage: {{ .Release.Service }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     kubernetes.io/cluster-service: "true"
+type: Opaque
 data:
-{{- range $key, $value := .Values.configMaps }}
-  {{ $key }}: |-
-{{ $value | indent 4 }}
+{{- range $key, $value := .Values.secrets }}
+  {{ $key }}: {{ $value | b64enc | quote }}
 {{- end }}
