update fluentd config

--- a/charts/rancher-logging/0.0.1/charts/fluentd-tester/values.yaml
+++ b/charts/rancher-logging/0.0.1/charts/fluentd-tester/values.yaml
@@ -82,9 +82,11 @@ configmapReload:
 
 secrets:
   fluent.conf: |-
-    @include /fluentd/etc/config/std/*.conf
-    # @include /fluentd/etc/config/std/custom_cluster.conf
-    # @include /fluentd/etc/config/std/custom_project.conf
+    @include /fluentd/etc/config/std/system.conf.conf
+    @include /fluentd/etc/config/std/custom_cluster.conf
+    @include /fluentd/etc/config/std/custom_project.conf
+    @include /fluentd/etc/config/std/legacy_custom_cluster.conf
+    @include /fluentd/etc/config/std/legacy_custom_project.conf
 
     @include /fluentd/etc/config/custom/project/*.conf
     @include /fluentd/etc/config/custom/cluster/*.conf
