add rbac to tester

--- a/charts/rancher-logging/0.0.1/charts/fluentd-tester/templates/pod.yaml
+++ b/charts/rancher-logging/0.0.1/charts/fluentd-tester/templates/pod.yaml
@@ -13,6 +13,7 @@ metadata:
 {{ toYaml .Values.labels | indent 4 }}
 {{- end }}
 spec:
+  serviceAccountName: {{ template "fluentd-tester.fullname" . }}
   containers:
   - name: "dry-run"
     image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
