--- a/charts/rancher-logging/0.0.1/requirements.yaml
+++ b/charts/rancher-logging/0.0.1/requirements.yaml
@@ -8,3 +8,8 @@ dependencies:
     version: 0.0.1
     condition: log-aggregator.enabled
     repository: "file://./charts/log-aggregator/"
+
+    - name: fluentd-tester
+    version: 0.0.1
+    condition: fluentd-tester.enabled
+    repository: "file://./charts/fluentd-tester/"
