remove configmap sha 256

--- a/charts/rancher-logging/0.0.1/charts/fluentd/templates/daemonset.yaml
+++ b/charts/rancher-logging/0.0.1/charts/fluentd/templates/daemonset.yaml
@@ -37,7 +37,7 @@ spec:
       # Note that this does not guarantee admission on the nodes (#40573).
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
-        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        # checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
 {{- if .Values.annotations }}
 {{ toYaml .Values.annotations | indent 8 }}
 {{- end }}
