--- a/charts/rancher-logging/0.0.1/charts/fluentd/templates/secret.yaml
+++ b/charts/rancher-logging/0.0.1/charts/fluentd/templates/secret.yaml
@@ -9,7 +9,22 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-{{- range $key, $value := .Values.secrets.config }}
+{{- range $key, $value := .Values.secrets.generate }}
+  {{ $key }}: {{ $value | b64enc | quote }}
+{{- end }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "fluentd.fullname" . }}-precan
+  labels:
+    app: {{ template "fluentd.name" . }}-precan
+    chart: {{ template "fluentd.version" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+type: Opaque
+data:
+{{- range $key, $value := .Values.secrets.precanConfig }}
   {{ $key }}: {{ $value | b64enc | quote }}
 {{- end }}
 ---
