--- a/charts/rancher-istio/v1.1.1/values.yaml
+++ b/charts/rancher-istio/v1.1.1/values.yaml
@@ -442,3 +442,6 @@ global:
   # This field is set to false by default, so 'helm template ...'
   # will ignore the helm test yaml files when generating the template
   enableHelmTest: false
+
+certmanager:
+  enabled: false
