--- a/charts/rancher-istio/v1.1.1/charts/kiali/templates/deployment.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/kiali/templates/deployment.yaml
@@ -43,6 +43,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: AUTH_STRATEGY
+          value: {{ .Values.dashboard.authStrategy }}
         - name: SERVER_CREDENTIALS_USERNAME
           valueFrom:
             secretKeyRef:
