--- a/charts/rancher-istio/v1.1.1/charts/kiali/values.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/kiali/values.yaml
@@ -28,7 +28,7 @@ dashboard:
   passphrase: admin
 
   # Override the automatically detected Grafana URL, useful when Grafana service has no ExternalIPs
-  # grafanaURL:
+  grafanaURL: http://grafana:3000
 
   # Override the automatically detected Jaeger URL, useful when Jaeger service has no ExternalIPs
   # jaegerURL:
