--- a/charts/rancher-istio/v1.1.1/charts/prometheus/templates/service.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/prometheus/templates/service.yaml
@@ -14,32 +14,10 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
+  type: ClusterIP
   selector:
     app: prometheus
   ports:
-  - name: http-prometheus
+  - name: access-prometheus
     protocol: TCP
-    port: 9090
-
-{{- if .Values.service.nodePort.enabled }}
-# Using separate ingress for nodeport, to avoid conflict with pilot e2e test configs.
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: prometheus-nodeport
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app: prometheus
-    chart: {{ template "prometheus.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
-spec:
-  type: NodePort
-  ports:
-  - port: 9090
-    nodePort: {{ .Values.service.nodePort.port }}
-    name: http-prometheus
-  selector:
-    app: prometheus
-{{- end }}
+    port: 80
