--- a/charts/rancher-istio/v1.1.1/charts/prometheus/values.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/prometheus/values.yaml
@@ -3,8 +3,13 @@
 #
 enabled: true
 replicaCount: 1
-hub: docker.io/prom
+
+repository: docker.io/prom
 tag: v2.3.1
+proxy:
+  repository: rancher/nginx
+  tag: 1.15.8-alpine
+
 retention: 6h
 nodeSelector: {}
 
@@ -27,11 +32,7 @@ ingress:
     #   hosts:
     #     - prometheus.local
 
-service:
-  annotations: {}
-  nodePort:
-    enabled: false
-    port: 32090
-
 security:
   enabled: true
+
+resources: {}
