--- a/charts/rancher-istio/v1.1.1/charts/grafana/values.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/grafana/values.yaml
@@ -6,6 +6,12 @@ replicaCount: 1
 image:
   repository: grafana/grafana
   tag: 5.4.0
+  tool:
+    repository: rancher/prometheus-auth
+    tag: v0.2.0
+  proxy:
+    repository: rancher/nginx
+    tag: 1.15.8-alpine
 ingress:
   enabled: false
   ## Used to create an Ingress record.
@@ -33,9 +39,9 @@ nodeSelector: {}
 contextPath: /grafana
 service:
   annotations: {}
-  name: http
+  name: access-grafana
   type: ClusterIP
-  externalPort: 3000
+  externalPort: 80
   loadBalancerIP:
   loadBalancerSourceRanges:
 
@@ -64,3 +70,5 @@ dashboardProviders:
       disableDeletion: false
       options:
         path: /var/lib/grafana/dashboards/istio
+
+resources: {}
