add nginx to kiali

--- a/charts/rancher-istio/v1.1.1/charts/kiali/templates/service.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/kiali/templates/service.yaml
@@ -14,5 +14,8 @@ spec:
   - name: http-kiali
     protocol: TCP
     port: 20001
+  - name: http-access-kiali
+    protocol: TCP
+    port: 80
   selector:
     app: kiali
