--- a/charts/rancher-istio/v1.1.1/charts/kiali/values.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/kiali/values.yaml
@@ -3,8 +3,12 @@
 #
 enabled: false
 replicaCount: 1
-hub: docker.io/kiali
-tag: v0.16
+image:
+  repository: docker.io/kiali/kiali
+  tag: v0.16
+  proxy:
+    repository: rancher/nginx
+    tag: 1.15.8-alpine
 contextPath: /
 nodeSelector: {}
 ingress:
@@ -36,3 +40,5 @@ prometheusAddr: http://prometheus:9090
 
 service:
   type: NodePort
+
+resources: {}
