--- a/charts/rancher-istio/v1.1.1/charts/kiali/values.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/kiali/values.yaml
@@ -3,8 +3,12 @@
 #
 enabled: false
 replicaCount: 1
-hub: docker.io/kiali
-tag: v0.14
+image:
+  repository: docker.io/kiali/kiali
+  tag: v0.16
+  proxy:
+    repository: rancher/nginx
+    tag: 1.15.8-alpine
 contextPath: /
 nodeSelector: {}
 ingress:
@@ -22,16 +26,19 @@ ingress:
     #     - kiali.local
 
 dashboard:
+  authStrategy: login
   secretName: kiali
   username: admin
   passphrase: admin
 
   # Override the automatically detected Grafana URL, useful when Grafana service has no ExternalIPs
-  # grafanaURL:
+  grafanaURL: http://grafana:3000
 
   # Override the automatically detected Jaeger URL, useful when Jaeger service has no ExternalIPs
   # jaegerURL:
 prometheusAddr: http://prometheus:9090
 
 service:
-  type: NodePort
+  type: ClusterIP
+
+resources: {}
