--- a/charts/rancher-istio/v1.1.1/charts/grafana/values.yaml
+++ b/charts/rancher-istio/v1.1.1/charts/grafana/values.yaml
@@ -6,6 +6,9 @@ replicaCount: 1
 image:
   repository: grafana/grafana
   tag: 5.4.0
+  proxy:
+    repository: rancher/nginx
+    tag: 1.15.8-alpine
 ingress:
   enabled: false
   ## Used to create an Ingress record.
@@ -33,11 +36,7 @@ nodeSelector: {}
 contextPath: /grafana
 service:
   annotations: {}
-  name: http
   type: ClusterIP
-  externalPort: 3000
-  loadBalancerIP:
-  loadBalancerSourceRanges:
 
 datasources:
   datasources.yaml:
@@ -64,3 +63,5 @@ dashboardProviders:
       disableDeletion: false
       options:
         path: /var/lib/grafana/dashboards/istio
+
+resources: {}
