--- a/charts/rancher-monitoring/v0.0.3/requirements.yaml
+++ b/charts/rancher-monitoring/v0.0.3/requirements.yaml
@@ -66,5 +66,5 @@ dependencies:
 
   - name: operator
     version: 0.0.2
-    condition: operator.enabled,enabled
+    condition: operator.enabled
     repository: "file://./charts/operator/"
