--- a/charts/rancher-logging/0.1.2/charts/fluentd/values.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd/values.yaml
@@ -35,7 +35,8 @@ tolerations:
     operator: Exists
 
 
-nodeSelector: {}
+nodeSelector: 
+  beta.kubernetes.io/os: linux
 
 service:
   type: ClusterIP
@@ -54,6 +55,67 @@ configmapReload:
     tag: v0.2.2
     pullPolicy: IfNotPresent
   resources: {}
+
+windows:
+  enabled: false
+  labels: {}
+
+  image:
+    repository: micheliac/fluentd
+    tag: dev-windows-1809
+    pullPolicy: IfNotPresent
+
+  resources: {}
+    # limits:
+    #   cpu: 100m
+    #   memory: 500Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 200Mi
+  # env:
+
+  command: '["powershell", "-command",  "fluentd", "-vv", "-c", "/fluentd/etc/config/entry/fluent.conf"]'
+  # command: '["powershell", "-command", "fluentd", "-vv"]'
+
+  rbac:
+    create: true
+
+  serviceAccount:
+    create: true
+
+  livenessProbe:
+    enabled: true
+
+  annotations: {}
+
+  # updateStrategy:
+  #   type: RollingUpdate
+
+  tolerations:
+    - effect: NoSchedule
+      operator: Exists
+
+
+  nodeSelector:
+    beta.kubernetes.io/os: windows
+
+  service:
+    type: ClusterIP
+    ports:
+      - name: metric
+        port: 24231
+        targetPort: metric
+
+  cluster:
+    dockerRoot: C:\ProgramData\docker
+
+  configmapReload:
+    name: windows-reloader
+    image:
+      repository: micheliac/configmap-reload
+      tag: v0.2.2
+      pullPolicy: IfNotPresent
+    resources: {}
 
 secrets:
   entry:
