--- a/charts/rancher-logging/0.1.2/charts/log-aggregator/values.yaml
+++ b/charts/rancher-logging/0.1.2/charts/log-aggregator/values.yaml
@@ -7,7 +7,8 @@ image:
   repository: rancher/log-aggregator
   tag: v0.1.5
 
-nodeSelector: {}
+nodeSelector: 
+  beta.kubernetes.io/os: linux
 
 # updateStrategy:
 #   type: RollingUpdate
@@ -29,3 +30,38 @@ serviceAccount:
 
 ## flexvolume dir
 flexVolumeDir: /usr/libexec/kubernetes/kubelet-plugins/volume/exec
+
+windows:
+  enabled: false
+  enabledRBAC: true
+
+  labels: {}
+  ## Log Aggregator container image
+  ##
+  image:
+    repository: micheliac/log-aggregator
+    tag: windows
+
+  nodeSelector: 
+    beta.kubernetes.io/os: windows
+
+  # updateStrategy:
+  #   type: RollingUpdate
+
+  tolerations:
+    - effect: NoSchedule
+      operator: Exists
+
+  ## Resource limits & requests
+  ## Ref: https://kubernetes.io/docs/user-guide/compute-resources/
+  ##
+  resources: {}
+    # requests:
+    #   memory: 400Mi
+
+  serviceAccount:
+    # Specifies whether a ServiceAccount should be created
+    create: true
+
+  ## flexvolume dir
+  flexVolumeDir: C:/var/lib/kubelet/volumeplugins
