--- a/charts/rancher-logging/0.1.2/charts/fluentd/charts/fluentd-windows/templates/daemonset-windows.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd/charts/fluentd-windows/templates/daemonset-windows.yaml
@@ -1,20 +1,20 @@
-{{- if .Values.windows.enabled -}}
+{{- if .Values.enabled -}}
 apiVersion: {{ template "daemonset_api_version" . }}
 kind: DaemonSet
 metadata:
-  name: {{ template "fluentd.fullname" . }}-windows
+  name: {{ template "fluentd.fullname" . }}
   labels:
     app: {{ template "fluentd.name" . }}
     chart: {{ template "fluentd.version" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-{{- if .Values.windows.labels }}
-{{ toYaml .Values.windows.labels | indent 4 }}
+{{- if .Values.labels }}
+{{ toYaml .Values.labels | indent 4 }}
 {{- end }}
 spec:
-{{- if .Values.windows.updateStrategy }}
+{{- if .Values.updateStrategy }}
   updateStrategy:
-{{ toYaml .Values.windows.updateStrategy | indent 4 }}
+{{ toYaml .Values.updateStrategy | indent 4 }}
 {{- end }}
   selector:
     matchLabels:
@@ -28,23 +28,23 @@ spec:
         chart: {{ template "fluentd.version" . }}
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
-    {{- if .Values.windows.labels }}
-    {{ toYaml .Values.windows.labels | indent 4 }}
+    {{- if .Values.labels }}
+    {{ toYaml .Values.labels | indent 4 }}
     {{- end }}
-{{- if .Values.windows.annotations }}
-{{ toYaml .Values.windows.annotations | indent 8 }}
+{{- if .Values.annotations }}
+{{ toYaml .Values.annotations | indent 8 }}
 {{- end }}
     spec:
       serviceAccountName: {{ template "fluentd.fullname" . }}
       containers:
       - name: {{ template "fluentd.fullname" . }}
-        image:  {{ template "system_default_registry" . }}{{ .Values.windows.image.repository }}:{{ .Values.windows.image.tag }}
-        imagePullPolicy: {{ .Values.windows.image.pullPolicy | quote }}
-        {{- if .Values.windows.command }}
-        command: {{ .Values.windows.command }}
+        image:  {{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag }}
+        imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+        {{- if .Values.command }}
+        command: {{ .Values.command }}
         {{ end }}
         env:
-        {{- range $key, $value := .Values.windows.env }}
+        {{- range $key, $value := .Values.env }}
         - name: {{ $key }}
           value: {{ $value | quote }}
         {{- end }}
@@ -53,7 +53,7 @@ spec:
             fieldRef:
               fieldPath: spec.nodeName
         resources:
-{{ toYaml .Values.windows.resources | indent 10 }}
+{{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
         # - mountPath: /fluentd/etc/config/custom
         #   name: custom
@@ -63,7 +63,7 @@ spec:
           name: entry
         - mountPath: /fluentd/etc/config/ssl
           name: ssl
-        - mountPath: {{ .Values.windows.cluster.dockerRoot }}
+        - mountPath: {{ .Values.cluster.dockerRoot }}
           name: dockerroot
         - mountPath: /var/log/containers
           name: varlogcontainers
@@ -78,8 +78,8 @@ spec:
         # - name: libsystemddir
         #   mountPath: /host/lib
           readOnly: true
-{{- if .Values.windows.extraVolumeMounts }}
-{{ toYaml .Values.windows.extraVolumeMounts | indent 8 }}
+{{- if .Values.extraVolumeMounts }}
+{{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{- end }}
         ports:
 {{- range $port := .Values.service.ports }}
@@ -89,7 +89,7 @@ spec:
             protocol: {{ $port.protocol }}
 {{- end }}
 {{- end }}
-{{- if .Values.windows.livenessProbe.enabled }}
+{{- if .Values.livenessProbe.enabled }}
         # Liveness probe is aimed to help in situarions where fluentd
         # silently hangs for no apparent reasons until manual restart.
         # The idea of this probe is that if fluentd is not queueing or
@@ -100,8 +100,8 @@ spec:
         # TODO
 {{- end }}
       - name: {{ template "fluentd.fullname" . }}-{{ .Values.configmapReload.name }}
-        image: {{ template "system_default_registry" . }}{{ .Values.windows.configmapReload.image.repository }}:{{ .Values.configmapReload.image.tag }}
-        imagePullPolicy: "{{ .Values.windows.configmapReload.image.pullPolicy }}"
+        image: {{ template "system_default_registry" . }}{{ .Values.configmapReload.image.repository }}:{{ .Values.configmapReload.image.tag }}
+        imagePullPolicy: "{{ .Values.configmapReload.image.pullPolicy }}"
         args:
           # - --volume-dir=/fluentd/etc/config/custom
           - --volume-dir=/fluentd/etc/config/precan
@@ -110,7 +110,7 @@ spec:
           - --webhook-method=GET
           - --webhook-url=http://127.0.0.1:24444/api/config.reload
         resources:
-        {{ toYaml .Values.windows.configmapReload.resources | indent 12 }}
+        {{ toYaml .Values.configmapReload.resources | indent 12 }}
         volumeMounts:
           # - mountPath: /fluentd/etc/config/custom
           #   name: custom
@@ -126,7 +126,7 @@ spec:
       #     path: /var/lib/rancher/fluentd/etc/config/custom
       #   name: custom
       - hostPath:
-          path: {{ .Values.windows.cluster.dockerRoot }}
+          path: {{ .Values.cluster.dockerRoot }}
         name: dockerroot
       - hostPath:
           path: /var/log/containers
@@ -155,15 +155,15 @@ spec:
       # - name: libsystemddir
       #   hostPath:
       #     path: /usr/lib64
-{{- if .Values.windows.extraVolumes }}
-{{ toYaml .Values.windows.extraVolumes | indent 6 }}
+{{- if .Values.extraVolumes }}
+{{ toYaml .Values.extraVolumes | indent 6 }}
 {{- end }}
-{{- if .Values.windows.nodeSelector }}
+{{- if .Values.nodeSelector }}
       nodeSelector:
-{{ toYaml .Values.windows.nodeSelector | indent 8 }}
+{{ toYaml .Values.nodeSelector | indent 8 }}
 {{- end }}
-{{- if .Values.windows.tolerations }}
+{{- if .Values.tolerations }}
       tolerations:
-{{ toYaml .Values.windows.tolerations | indent 6 }}
+{{ toYaml .Values.tolerations | indent 6 }}
 {{- end }}
 {{- end }}
