--- a/charts/rancher-logging/0.1.2/charts/log-aggregator/charts/log-aggregator-linux/templates/log-aggregator.yaml
+++ b/charts/rancher-logging/0.1.2/charts/log-aggregator/charts/log-aggregator-linux/templates/log-aggregator.yaml
@@ -27,7 +27,7 @@ spec:
         chart: {{ template "log-aggregator.version" . }}
         release: {{ .Release.Name }}
     spec:
-      serviceAccountName: {{ template "log-aggregator.fullname" . }}
+      # serviceAccountName: {{ template "log-aggregator.fullname" . }}
       containers:
       - name: log-aggregator
         image: {{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag }}
