--- a/charts/rancher-logging/0.1.2/charts/fluentd/charts/fluentd-windows/templates/daemonset-windows.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd/charts/fluentd-windows/templates/daemonset-windows.yaml
@@ -2,7 +2,7 @@
 apiVersion: {{ template "daemonset_api_version" . }}
 kind: DaemonSet
 metadata:
-  name: {{ template "fluentd.fullname" . }}
+  name: {{ template "fluentd.fullname" . }}-windows
   labels:
     app: {{ template "fluentd.name" . }}
     chart: {{ template "fluentd.version" . }}
@@ -35,7 +35,7 @@ spec:
 {{ toYaml .Values.annotations | indent 8 }}
 {{- end }}
     spec:
-      serviceAccountName: {{ template "fluentd.fullname" . }}
+      serviceAccountName:  {{ template "fluentd.serviceAccountName"}}
       containers:
       - name: {{ template "fluentd.fullname" . }}
         image:  {{ template "system_default_registry" . }}{{ .Values.image.repository }}:{{ .Values.image.tag }}
