--- a/charts/rancher-logging/0.1.2/charts/fluentd/templates/service-account.yaml
+++ b/charts/rancher-logging/0.1.2/charts/fluentd/templates/service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "fluentd.fullname" . }}
+  name: {{.Values.global.fluentdServiceAccount}}
   labels:
     app: {{ template "fluentd.name" . }}
     chart: {{ template "fluentd.version" . }}
